--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>be.everesst.socialriskdeclaration.bundling</groupId>
+    <groupId>co.siteasssit</groupId>
     <artifactId>SiteAssist</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -23,11 +23,6 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.14.3</version> <!-- Use the latest version -->
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.8</version> <!-- Use the latest version -->
         </dependency>
     </dependencies>
 </project>
